# job-application-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py  test.py
mcp_server/: server.py
src/job_application_mcp/: __init__.py  server.py
