[project]
name = "job-application-mcp"
version = "0.1.0"
description = "Job Application Tracker MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "psycopg2-binary",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]