[project]
name = "job-application-mcp"
version = "0.1.0"
description = "Job Application Tracker MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "mcp>=1.25.0",
    "psycopg2-binary",
    "python-dotenv",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"